--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "devDependencies": {
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0"
+  },
+  "dependencies": {
+    "sweetalert2": "^11.23.0"
   }
 }
